--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanhaiya's Personal-site</title>
 </head>
-<body>
+<body style="background-color: #EAF6F6;">
     <table cellspacing="20">
         <tr>
             <td> <img src="https://raw.githubusercontent.com/desi-coder11/cv/main/circle-cropped%20(1).png" width="200" height="200" alt="Kanhaiya's Profile Image"></td>
